# Zori.pay

./: .gitignore  CLAUDE.md  GEMINI.md  README.md  docker-compose.yml
api-java/: dependency-reduced-pom.xml  pom.xml  secrets  setup.sh
api-server/: .env.example  .gitignore  Cargo.toml  test-login.html
api-server/src/: config.rs  db.rs  error.rs  main.rs  models.rs
api-server/src/auth/: google.rs  jwt.rs  mod.rs  passkey.rs
api-server/src/crypto/: encryption.rs  mod.rs  wallet.rs
api-server/src/routes/: auth.rs  balance.rs  kyc.rs  mod.rs  profile.rs  receive.rs  reference_data.rs  send.rs  test_drive.rs  transactions.rs  web.rs
api-server/src/services/: google_drive.rs  mod.rs
docs/: CLOUDFLARE_TUNNEL_SETUP.md  DATABASE_SCHEMA.md  GOOGLE_CLOUD_SETUP.md  REACT_INTEGRATION.md  TESTING.md  UPDATE_GOOGLE_CALLBACK.md  WEB_LOGIN_INTEGRATION.md
docs/api/: auth.html  balance.html  index.html  kyc.html  profile.html  receive.html  reference-data.html  send.html  transactions.html
flutter_app/: dev_server.py  pubspec.yaml
flutter_app/lib/: app_shell.dart  auth_modal.dart  home_page.dart  main.dart  mock_data.dart
flutter_app/web/: index.html  manifest.json
migrations/: changelog-master.xml  v001_schemas.xml  v002_registration.xml  v003_accounts.xml  v004_audit.xml  v005_blockchain_wallets.xml  v006_seed_reference_data.xml  v007_contact_types_not_null.xml  v007_seed_test_data.xml  v008_contact_types.xml
openapi/: README.md  auth.yaml  balance.yaml  kyc.yaml  profile.yaml  receive.yaml  reference-data.yaml  send.yaml  transactions.yaml
ops/: .gitignore  create-migration-package.sh  pg_to_parquet.py  restore-migration-package.sh
scripts/: .gitignore  pg_dump.sh  requirements.txt  restore-migration-package.sh  serve_wasm.sh  tunnel.sh
web/: .env.development  .env.production  README.md  check-storage.js  index.html  package-lock.json  package.json  vite.config.ts  wrangler.toml
web/public/: metadata.json
(+115 files in other folders)
