[package]
name = "zori-api"
version = "0.1.0"
edition = "2021"
default-run = "zori-api"
authors = ["Carlos Augusto Leite Netto <carlos.netto@gmail.com>"]
description = "Zori.pay API Server"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }

# Authentication
oauth2 = "4.4"
jsonwebtoken = "9"
webauthn-rs = { version = "0.5", features = ["danger-allow-state-serialisation"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utils
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
url = "2"
thiserror = "1"
anyhow = "1"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hex = "0.4"

# HTTP client for Google token verification and Drive API
reqwest = { version = "0.12", features = ["json", "multipart"] }

# Blockchain - using ethers for EVM interactions
ethers = { version = "2.0", features = ["abigen", "ws"] }

# File uploads
multer = "3.1"
bytes = "1.9"
mime = "0.3"
futures-util = "0.3"

# Wallet generation
bip39 = "2.1"
tiny-hderive = "0.3"
secp256k1 = { version = "0.29", features = ["rand", "recovery"] }
tiny-keccak = { version = "2.0", features = ["keccak"] }

# Encryption
aes-gcm = "0.10"
rand = "0.8"

# Google Drive (using REST API directly)
yup-oauth2 = "9"

# Validation
validator = { version = "0.19", features = ["derive"] }

# Drive config tool
webbrowser = "1.0"
urlencoding = "2.1"

[[bin]]
name = "drive_config"
path = "src/bin/drive_config.rs"

[[bin]]
name = "wallet"
path = "src/bin/wallet.rs"
